testsuite/tests/typecheck/should_compile/T10504a.hs
module T10504a where

{-# INLINABLE myfun #-}

myfun :: a
myfun = undefined
